The seeker bar in music player is working now. Other UI fixes, responsiveness etc.

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,27 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey;  */
+  background: rgba(128, 128, 128, 0.619);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  /* background: rgb(18, 24, 31); */
+  background: rgba(255, 255, 255, 0.559);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+body {
+  background-color: rgb(31, 41, 55);
+}
 
+.modal-body {
+  background-color: rgba(31, 41, 55, 0.1);
+  backdrop-filter: blur(1rem);
+}
 
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
